문서편집 페이지 추가 초안

--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <style>
     </style>
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="popup.css">
 </head>
 <body>
     <header>
@@ -21,12 +20,17 @@
                 </div>
             </div>
             <div class="top_content_right">
+                <div class="top_content_document">
+                    <a href="document_edit.html">
+                        문서 편집/개설
+                    </a>
+                </div>
                 <div class="top_content_right_search">
                     <input type="text" 
                     style="width: 270px; height: 40px;border: solid, grey, 2px ; border-radius: 3px; font-size: 18px;"
                     placeholder="여기에서 검색">
                 </div>
-                <div style="width: 20px;"></div>
+                <div style="width: 20p"></div>
                 <div class="top_content_right_blank">
                     <img src="profile.img.webp" alt="회원가입" 
                     style="height: 50px; border: solid, rgb(205, 204, 204),2px;border-radius: 3px;"
@@ -37,7 +41,7 @@
         </div>
     </header>
     <div class="blank"></div>
-    <div class="middle_container_out" style="background-color: hsl(0, 9%, 91%);">
+    <div class="middle_container_out">
 
         <div class="middle_container_middle">
             <div>
