새 문서 작성 부분 수정 및 카테고리 분류 기능 추가

--- a/make_new_doc.html
+++ b/make_new_doc.html
@@ -20,9 +20,31 @@
             </div>
     </header>
     <div class="blank_editer"></div>
-    <div class="middle_container_out">
-        <div class="edit_middle_content">
-            <input type="text" placeholder="문서 제목" class="input_title">
+    <div class="edit_outer_container">
+        <div class="edit_middle_container">
+            <div class="edit_middle_content">
+                <input type="text" placeholder="문서 제목" class="input_title">
+            </div>
+            <div class="edit_select">
+                <select class="select">
+                    <option> 인물 </option>
+                    <option> 단체/기관 </option>
+                    <option> 예술(음악/문학/미술) </option>
+                    <option> 기업 </option>
+                    <option> 기록/역사 </option>
+                    <option> 사상/철학/종교 </option>
+                    <option> 과학/수학/공학/기술 </option>
+                    <option> 체육 </option>
+                    <option> 언어 </option>
+                    <option> 웹/앱/게임 </option>
+                    <option> 대중문화(만화/애니/영화/드라마) </option>
+                    <option> 사건/사고 </option>
+                    <option> 기타 </option>
+                </select>
+            </div>
+            <div>
+                <input type="number" placeholder="목차의 수" class="input_index">
+            </div>
         </div>
     </div>
 </body>
