--- a/make_new_doc.html
+++ b/make_new_doc.html
@@ -21,31 +21,54 @@
     </header>
     <div class="blank_editer"></div>
     <div class="edit_outer_container">
-        <div class="edit_middle_container">
-            <div class="edit_middle_content">
-                <input type="text" placeholder="문서 제목" class="input_title">
+        <div class="background-gray">
+            <div class="edit_middle_container">
+                <div class="edit_middle_content">
+                    <input type="text" placeholder="문서 제목" class="input_title">
+                </div>
+                <div class="edit_select">
+                    <select class="select" id="class_selection">
+                        <option disabled hidden selected> 분류</option>
+                        <option> 인물 </option>
+                        <option> 단체/기관 </option>
+                        <option> 예술(음악/문학/미술) </option>
+                        <option> 기업 </option>
+                        <option> 기록/역사 </option>
+                        <option> 사상/철학/종교 </option>
+                        <option> 과학/수학/공학/기술 </option>
+                        <option> 체육 </option>
+                        <option> 언어 </option>
+                        <option> 웹/앱/게임 </option>
+                        <option> 대중문화(만화/애니/영화/드라마) </option>
+                        <option> 사건/사고 </option>
+                        <option> 기타 </option>
+                    </select>
+                    </div>
+                <div class="selecting_out">
+                    <div>
+                        <input type="number" placeholder="목차의 수" class="input_index" id="index_nums">
+                    </div>
+                    <div class="submitting">
+                        <button id="freakin_button">
+                            목차 수 제출
+                        </button>
+                    </div>
+                </div>
             </div>
-            <div class="edit_select">
-                <select class="select">
-                    <option> 인물 </option>
-                    <option> 단체/기관 </option>
-                    <option> 예술(음악/문학/미술) </option>
-                    <option> 기업 </option>
-                    <option> 기록/역사 </option>
-                    <option> 사상/철학/종교 </option>
-                    <option> 과학/수학/공학/기술 </option>
-                    <option> 체육 </option>
-                    <option> 언어 </option>
-                    <option> 웹/앱/게임 </option>
-                    <option> 대중문화(만화/애니/영화/드라마) </option>
-                    <option> 사건/사고 </option>
-                    <option> 기타 </option>
-                </select>
-            </div>
-            <div>
-                <input type="number" placeholder="목차의 수" class="input_index">
+            <div class="doc_content_out" id="hidden_content">
+                <div class="doc_content_top">
+                    <input type="text" placeholder="목차 제목을 입력하세요" class="doc_index_title">
+                    <select class="index_choose">
+                        <option disabled hidden selected> 목차 순서</option>
+                    </select>
+                </div>
+                <div class="doc_content">
+                    <textarea class="doc_input"></textarea>
+                </div>
             </div>
         </div>
     </div>
+
+    <script src="make_new_document.js"></script>
 </body>
 </html>
