--- a/make_new_doc.html
+++ b/make_new_doc.html
@@ -58,7 +58,7 @@
             <div class="doc_content_out" id="hidden_content">
                 <div class="doc_content_top">
                     <input type="text" placeholder="목차 제목을 입력하세요" class="doc_index_title">
-                    <select class="index_choose">
+                    <select class="index_choose" id="freakinSelect">
                         <option disabled hidden selected> 목차 순서</option>
                     </select>
                 </div>
