js 코드 수정 및 변경사항 감지기능 추가

--- a/make_new_doc.html
+++ b/make_new_doc.html
@@ -57,13 +57,13 @@
             </div>
             <div class="doc_content_out" id="hidden_content">
                 <div class="doc_content_top">
-                    <input type="text" placeholder="목차 제목을 입력하세요" class="doc_index_title">
+                    <input type="text" placeholder="목차 제목을 입력하세요" class="doc_index_title" id="mokCha">
                     <select class="index_choose" id="freakinSelect">
                         <option disabled hidden selected> 목차 순서</option>
                     </select>
                 </div>
                 <div class="doc_content">
-                    <textarea class="doc_input"></textarea>
+                    <textarea class="doc_input" id="naeYong"></textarea>
                 </div>
             </div>
         </div>
