새문서 개설 파트 수정 최종본

--- a/make_new_doc.html
+++ b/make_new_doc.html
@@ -44,7 +44,7 @@
                         <option> 기타 </option>
                     </select>
                     </div>
-                <div class="selecting_out">
+                <div class="selecting_out" id="selectOut">
                     <div>
                         <input type="number" placeholder="목차의 수" class="input_index" id="index_nums">
                     </div>
@@ -59,7 +59,7 @@
                 <div class="doc_content_top">
                     <input type="text" placeholder="목차 제목을 입력하세요" class="doc_index_title" id="mokCha">
                     <select class="index_choose" id="freakinSelect">
-                        <option disabled hidden selected> 목차 순서</option>
+                        <option disabled hidden selected id="unSelected"> 목차 순서</option>
                     </select>
                 </div>
                 <div class="doc_content">
