--- a/index.html
+++ b/index.html
@@ -128,7 +128,21 @@
             </button>
         </div>
     </div>
-    <script>
+    <div class="hidden_shiit" id="shoNow">
+        <ol>
+            <li>이준희</li>
+            <li>최형욱</li>
+            <li>김세연</li>
+            <li>최창호</li>
+            <li>이재명</li>
+            <li>홍성채/논란/노무현 타살설</li>
+            <li>현우진</li>
+            <li>문재인</li>
+            <li>노무현</li>
+            <li>박근혜</li>
+        </ol>
+    </div>
+    <script src="java.js">
 
     </script>
 </body>
