--- a/make_new_doc.html
+++ b/make_new_doc.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>옹키피디아:새문서</title>
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="editer.css">
 </head>
