로그인 창 수정

--- a/index_original.html
+++ b/index_original.html
@@ -32,9 +32,10 @@
                 </div>
                 <div style="width: 20p"></div>
                 <div class="top_content_right_blank">
-                    <img src="profile.img.webp" alt="회원가입" 
-                    style="height: 50px; border: solid, rgb(205, 204, 204),2px;border-radius: 3px;"
-                    onclick="document.getElementById('popup_shii').style.display = 'block';">
+                    <a href="login.html">
+                        <img src="profile.img.webp" alt="회원가입" 
+                        style="height: 50px; border: solid, rgb(205, 204, 204),2px;border-radius: 3px;">
+                    </a>
                 </div>
             <div style="width: 20px;"></div>
             </div>
