로그인 창 팝업 제거

--- a/index_original.html
+++ b/index_original.html
@@ -68,7 +68,7 @@
                     옹충이들은 약 2019년 동탄에서 결성된 건전한 친목회입니다.<br>
                     현재 옹충이들 멤버는 많은 변화를 겪어 왔으며 옹충이들은 옹키피디아와 함께 성장중입니다.<br>
                     현재 옹충이들의 멤버로서는,<br>
-                    캘리포니아 산호세의 패왕 카사노바 준게이, <br>
+                    캘리포니아 산호세의 패왕 이준희, <br>
                     청계동 행동대장 형옹이, <br>
                     한백고의 브레인 세옹이, <br>
                     괌의 짱모가 있습니다. <br>
@@ -98,35 +98,13 @@
                     <li>최형욱/정치적 성향</li>
                     <li>이준희/사생활 논란</li>
                     <li>이준희/역대 여자친구</li>
-                    <li>홍성채/논란/노무현 타살설</li>
+                    <li>홍성채/논란</li>
                 </ul>
             </div>
             <div class="middle_container_right_content_ad">
                 광고
                 <img src="여명808.png" width="200">
             </div>
-        </div>
-    </div>
-    <div class="popup" id="popup_shii">
-        <div class="close_button" onclick="document.getElementById('popup_shii').style.display = 'none';">
-            x
-        </div>
-        <div class="id_input">
-            <input type="text" placeholder="아이디" style="width: 200px; height: 36px;">
-        </div>
-        <div class="pw_input">
-            <input type="text" placeholder="비밀번호" style="width: 200px; height: 36px;">
-        </div>
-        <div style="display: flex ;width: 205px; margin-left:155px; margin-top: 15px;">
-            <button style="flex: 1;">
-                로그인
-            </button>
-            <button style="flex: 1;">
-                회원가입
-            </button>
-            <button style="flex: 1;">
-                비밀번호 찾기
-            </button>
         </div>
     </div>
     <div class="hidden_shiit" id="shoNow">
@@ -136,7 +114,7 @@
             <li>김세연</li>
             <li>최창호</li>
             <li>이재명</li>
-            <li>홍성채/논란/노무현 타살설</li>
+            <li>홍성채/논란</li>
             <li>현우진</li>
             <li>문재인</li>
             <li>노무현</li>
