--- a/login.html
+++ b/login.html
@@ -10,10 +10,12 @@
     <div class="mid_container">
         <div class="login_head">로그인/회원가입</div>
         <div class="mid_content">
-            <div class="input">
-                <input type="text" placeholder="아이디" class="input_item">
-                <input type="password" placeholder="비밀번호" class="input_item">
-            </div>
+            <form name="idInput" method="post">
+                <div class="input">
+                    <input type="text" placeholder="아이디" class="input_item">
+                    <input type="password" placeholder="비밀번호" class="input_item">
+                </div>
+            </form>
             <div class="button">
                 <button class="login_btn">로그인</button>
                 <button class="login_btn">회원가입</button>
